# IMPERIA

./: .dockerignore  .env.example  .gitignore  AGENTS 2.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT 2.md  CODE_OF_CONDUCT.md  CONTRIBUTING 2.md  CONTRIBUTING.md  Dockerfile  README 2.md  README.md  SECURITY 2.md  SECURITY.md  api.py  docker-compose 2.yml  docker-compose.yml  main.py  pyproject 2.toml  pyproject.toml  requirements 2.txt  requirements-dev.txt  requirements.txt  test_nvda.py  test_nvidia_api.py
.cursor/: mcp.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.jetro/: canvas-registry.json  context.json  live-server.json  mcp-config.json
.jetro/canvases/: research_board_moq2rudl.json
cli/: config.py  main 2.py  main.py  utils 2.py  utils.py
cli/static/: welcome.txt
docs/: ADMIN_API 2.md  ADMIN_API.md  AGENTS 2.md  AGENTS.md  ANTHROPIC_FINANCIAL_SERVICES_INTEGRATION 2.md  API 2.md  API.md  ARCHITECTURE 2.md  ARCHITECTURE.md  COST_TRACKING 2.md  DATA_SOURCES 2.md  DATA_SOURCES.md  DEMO_MODE 2.md  DEMO_MODE.md  DEMO_UNIVERSE 2.md  DEMO_UNIVERSE.md  DEVELOPER_GUIDE 2.md  FORM4_13F 2.md  FRED_MACRO 2.md  NEWS_WINDOWS 2.md  NEWS_WINDOWS.md  POLYMARKET_PROVIDER.md  PRODUCT.md  PROJECT_STRUCTURE 2.md  PROJECT_STRUCTURE.md  README 2.md  README.md  REDIS 2.md  RESEARCH_STREAMING 2.md  SAFETY_AND_LIMITATIONS.md  SENTIMENT 2.md  SENTIMENT.md  THIRD_PARTY_NOTICES 2.md  backend_free_us_finance 2.md  backend_free_us_finance.md
examples/requests/: stock_first.http
frontend/: app.js  index.html  package-lock.json  package.json  style.css  styles.css  tailwind.config.ts
frontend-next/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Sidebar.tsx  Topbar.tsx  ui.tsx
postman/: IMPERIA_API.postman_collection.json
scripts/: smoke_test 2.py  smoke_test.py
tests/: conftest.py  test_api_backend.py  test_api_hardening 2.py  test_background_jobs 2.py  test_background_jobs.py  test_checkpoint_resume 2.py  test_computed_metrics.py  test_deepseek_orchestrator.py  test_deepseek_reasoning.py  test_deepseek_token_limits.py  test_demo_mode.py  test_earnings_data 2.py  test_earnings_data.py  test_expert_agent_graph 2.py  test_expert_agent_graph.py  test_fast_query_components.py  test_financial_services_skill_pack.py  test_integration.py  test_market_data 2.py  test_market_data.py  test_memory_log.py  test_model_validation.py  test_new_agents 2.py  test_news_aggregator 2.py  test_news_aggregator.py  test_persistence 2.py  test_persistence.py  test_phase2_api_routes.py  test_portfolio_graph_setup.py  test_provider_fallbacks 2.py  test_required_backend_modules 2.py  test_required_backend_modules.py  test_screener 2.py  test_screener.py  test_sec_edgar.py  test_signal_processing 2.py  test_sqlite_cache 2.py  test_sqlite_cache.py  test_stock_first_upgrade 2.py  test_stock_first_upgrade.py  (+1 more)
tradingagents/: __init__.py  default_config.py
tradingagents/agents/: __init__.py  schemas.py
tradingagents/api/: __init__.py  deps.py  main.py  models.py  responses.py  services.py
tradingagents/cache/: __init__.py  invalidation.py  keys.py  redis_cache.py  sqlite_cache.py
tradingagents/core/: safety.py
tradingagents/data/: us_equity_universe.json
tradingagents/dataflows/: __init__.py  (+30 more)
webapp/: app.js  index.html  styles.css
(+175 files in other folders)
