[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imperia-finance"
version = "0.3.0"
description = "IMPERIA: free-source US equity intelligence backend with fast queries and deep multi-agent research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backtrader>=1.9.78.123,<2",
    "fastapi>=0.115.9,<1",
    "langchain-anthropic>=0.3.15,<1",
    "langchain-core>=0.3.81,<1",
    "langchain-experimental>=0.3.4,<1",
    "langchain-google-genai>=4.0.0,<5",
    "langchain-openai>=0.3.23,<1",
    "langgraph>=0.4.8,<1",
    "langgraph-checkpoint-sqlite>=2.0.0,<3",
    "pandas>=2.3.0,<3",
    "parsel>=1.10.0,<2",
    "pydantic>=2.11.0,<3",
    "python-dotenv>=1.1.0,<2",
    "pytz>=2025.2",
    "questionary>=2.1.0,<3",
    "requests>=2.32.4,<3",
    "redis>=5.0.0,<6",
    "rich>=14.0.0,<15",
    "sse-starlette>=2.3.6,<3",
    "stockstats>=0.6.5,<1",
    "tqdm>=4.67.1,<5",
    "typer>=0.21.0,<1",
    "typing-extensions>=4.14.0,<5",
    "uvicorn>=0.34.3,<1",
    "yfinance>=0.2.63,<1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[project.scripts]
imperia = "cli.main:app"
tradingagents = "cli.main:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*"]

[tool.setuptools.package-data]
cli = ["static/*"]
tradingagents = ["data/*.json", "data/demo/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
